--- a/.babelrc
+++ b/.babelrc
@@ -1,5 +1,15 @@
 {
-  "presets": [["@babel/preset-env", { "targets": { "node": "12" } }]],
+  "presets": [
+    [
+      "@babel/preset-env",
+      {
+        "targets": {
+          "node": "12"
+        }
+      }
+    ],
+    "@babel/preset-typescript"
+  ],
   "plugins": [
     [
       "module-resolver",
