--- a/.babelrc
+++ b/.babelrc
@@ -1,15 +1,5 @@
 {
-  "presets": [
-    [
-      "@babel/preset-env",
-      {
-        "targets": {
-          "node": "12"
-        }
-      }
-    ],
-    "@babel/preset-typescript"
-  ],
+  "presets": [["@babel/preset-env", { "targets": { "node": "12" } }]],
   "plugins": [
     [
       "module-resolver",
