--- a/package.json
+++ b/package.json
@@ -41,10 +41,8 @@
   "devDependencies": {
     "@babel/core": "^7.9.0",
     "@babel/preset-env": "^7.9.0",
-    "@babel/preset-typescript": "^7.9.0",
     "@jesses/circle-github-bot": "^2.1.0",
     "@octokit/rest": "^17.1.4",
-    "@rollup/plugin-typescript": "^4.0.0",
     "babel-core": "^7.0.0-bridge.0",
     "babel-eslint": "^10.1.0",
     "babel-jest": "^25.2.6",
@@ -66,9 +64,7 @@
     "remark-preset-lint-recommended": "^4.0.0",
     "rollup": "^2.3.2",
     "rollup-plugin-babel": "^4.4.0",
-    "rollup-plugin-commonjs": "^10.1.0",
-    "rollup-plugin-node-resolve": "5.2.0",
-    "typescript": "^3.8.3"
+    "rollup-plugin-commonjs": "^10.1.0"
   },
   "dependencies": {
     "@postlight/ci-failed-test-reporter": "^1.0",
